-------------------------------------------------------------------------------
v5_7_3 (2014-08-26) SJB
Tag for new season of daily eBOSS data processing.

SJB 2014-08-25:
loadSN2Value : update for new platedb connection methods.
apofix : change /not_sos option to /force, and check for eboss@sdss4-eboss
    rather than checking for running on sos or sos3.apo.nmsu.edu

DJS 2014-08-24 
apod: only reduce eBOSS files, not MaNGA.  (This is the very much simplified 
script for running SOS, without connecting to platedb or svn.) 

-------------------------------------------------------------------------------
v5_7_2 (2014-07-23 ?) SJB
Tag for final DR12 run of post-BOSS data

JCR 2014-07-23:
extract_object: Looks up file spSplitSky.par in $SPECLOG_DIR/opfiles for
plate and camera to determine if splitsky should occur.  If plate and
camera are in that file, then splitsky does not occur.

SJB 2014-05-23:
spreduce1d: fix parsing bug when spPlate files have a different prefix
or plateids that have more than 4 digits.  regex to the rescue.

SJB 2014-04-28:
rundaily_riemann_script: make sure to svn update speclog and platelist trunk,
not some tagged version

-------------------------------------------------------------------------------
v5_7_1 (2014-04-24) SJB
Tag for continuing with daily processing post BOSS LSS DR12.
Code is identical except addition of spx_to_sdss.pro

DJS 2014-04-22:
spec1d/spx_to_sdss.pro : converter of spectroperfectionism output
to spPlate format for testing.

-------------------------------------------------------------------------------
v5_7_0 (2014-04-10) SJB
Tag for BOSS main survey DR12

SJB 2014-04-09:
SPPLAN2D: typo!  Exclude 'test' exposures.  Only 'excellent'.  Smithers.
SPHDRFIX: Include exposure number in the splog line when changing something.
SDSS_PLATE_SORT (ticket 1896): 
  - Don't propagate upstream bug where failed position matches could still
    have thing_id>0.  Replace with thing_id=-1.  Photo data already 0.